--- a/tracker-app/index.html
+++ b/tracker-app/index.html
@@ -15,7 +15,7 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background: linear-gradient(to top left, #3b82f6, #1e3a8a);
+            background-color: #1f2937; /* Solid dark background */
             @apply text-white min-h-screen flex items-center justify-center;
         }
         .app-container {
